--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,15 +27,23 @@
     ]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "production": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ]
+  },
+    "dependencies": {
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
+  "react-scripts": "5.0.1",
+  "web-vitals": "^2.1.4"
+}
+
+
 }
